@@ -1,0 +1,3 @@
+# full comment
+partial = commented # you should not read this
+escaped = blah\#this should not be stripped
